--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -135,6 +135,38 @@ reveal:
     </section>
 
     <section>
+        <h3>Why "Dynamic Programming"?</h3>
+
+        <blockquote style="width:90%; margin-top: 2em; font-size:0.7em">
+            The 1950s were not good years for mathematical research. We
+            had a very interesting gentleman in Washington named Wilson. He was
+            Secretary of Defense, and he actually had a pathological fear and
+            hatred of the word research. I’m not using the term lightly; I’m using
+            it precisely. His face would suffuse, he would turn red, and he would
+            get violent if people used the term research in his presence. You can
+            imagine how he felt, then, about the term mathematical. The RAND
+            Corporation was employed by the Air Force, and the Air Force had Wilson
+            as its boss, essentially. Hence, I felt I had to do something to shield
+            Wilson and the Air Force from the fact that I was really doing
+            mathematics inside the RAND Corporation. What title, what name, could I
+            choose? In the first place I was interested in planning, in decision
+            making, in thinking. But planning, is not a good word for various
+            reasons. I decided therefore to use the word “programming”. I wanted to
+            get across the idea that this was dynamic, this was multistage, this
+            was time-varying. I thought, let's kill two birds with one stone. Let's
+            take a word that has an absolutely precise meaning, namely dynamic, in
+            the classical physical sense. It also has a very interesting property
+            as an adjective, and that it's impossible to use the word dynamic in a
+            pejorative sense. Try thinking of some combination that will possibly
+            give it a pejorative meaning. It's impossible. Thus, I thought dynamic
+            programming was a good name. It was something not even a Congressman
+            could object to.
+
+            <div class="cite">Richard Bellman, "Eye of the Hurricane: An Autobiography", 1984</div>
+        </blockquote>
+    </section>
+
+    <section>
         <h3>Viterbi Algorithm</h3>
 
         <div class="textbox" style="width:70%;margin-left:15%;margin-top:10%">
@@ -241,7 +273,7 @@ reveal:
     <section>
         <h2>Posterior fairness probabilities</h2>
 
-        <div class="textbox" style="margin-top:10%">
+        <div class="textbox" style="margin-top:2em">
             <div class="title"><a id="HMMforwardBackward" href="#" style="color:white">Run Forward-Backward Demo</a></div>
             <pre id="HMMforwardBackwardOutput">
 
@@ -333,41 +365,16 @@ reveal:
 </section>
 
 <section>
-    <h2>Pairwise alignment with HMMs</h2>
+    <section class="center">
+        <h2>HMMs in Bioinformatics</h2>
+    </section>
+
+    <section>
+        <h3>Pairwise alignment with HMMs</h3>
+    </section>
+
+    <section>
+        <h3>Profile alignment with HMMs</h3>
+    </section>
 </section>
 
-<section>
-    <h2>Profile alignment</h2>
-</section>
-
-<section>
-    <h2>Why "Dynamic Programming"?</h2>
-
-    <blockquote style="width:90%; margin-top: 2em; font-size:0.7em">
-        The 1950s were not good years for mathematical research. We
-        had a very interesting gentleman in Washington named Wilson. He was
-        Secretary of Defense, and he actually had a pathological fear and
-        hatred of the word research. I’m not using the term lightly; I’m using
-        it precisely. His face would suffuse, he would turn red, and he would
-        get violent if people used the term research in his presence. You can
-        imagine how he felt, then, about the term mathematical. The RAND
-        Corporation was employed by the Air Force, and the Air Force had Wilson
-        as its boss, essentially. Hence, I felt I had to do something to shield
-        Wilson and the Air Force from the fact that I was really doing
-        mathematics inside the RAND Corporation. What title, what name, could I
-        choose? In the first place I was interested in planning, in decision
-        making, in thinking. But planning, is not a good word for various
-        reasons. I decided therefore to use the word “programming”. I wanted to
-        get across the idea that this was dynamic, this was multistage, this
-        was time-varying. I thought, let's kill two birds with one stone. Let's
-        take a word that has an absolutely precise meaning, namely dynamic, in
-        the classical physical sense. It also has a very interesting property
-        as an adjective, and that it's impossible to use the word dynamic in a
-        pejorative sense. Try thinking of some combination that will possibly
-        give it a pejorative meaning. It's impossible. Thus, I thought dynamic
-        programming was a good name. It was something not even a Congressman
-        could object to.
-
-        <div class="cite">Richard Bellman, "Eye of the Hurricane: An Autobiography", 1984</div>
-    </blockquote>
-</section>
