Added pair HMM model diagram.

--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -371,6 +371,16 @@ reveal:
 
     <section>
         <h3>Pairwise alignment with HMMs</h3>
+
+        <img data-src="pair_HMM.svg" style="width:80%">
+    </section>
+
+    <section>
+        <h3>Most likely pairwise alignment</h3>
+    </section>
+
+    <section>
+        <h3>Pairwise alignment probabilities</h3>
     </section>
 
     <section>
