--- a/lecture4/index.html
+++ b/lecture4/index.html
@@ -486,7 +486,7 @@ IAGADNGAGV </pre>
 
     <ol>
         <li class="fragment">Hidden Markov models (HMMs) model the stochastic generation of observations from a hidden state evolving according to a Markov chain.</li>
-        <li class="fragment">Many useful algorithms exist for working with HMMS:
+        <li class="fragment">Many useful algorithms exist for working with HMMs:
             <ul>
                 <li class="fragment">The <b>Viterbi algorithm</b> for finding the optimal path,</li>
                 <li class="fragment">the <b>forward algorithm</b> for finding the probability of the observations, and</li>
