--- a/lecture5/index.html
+++ b/lecture5/index.html
@@ -85,14 +85,28 @@ and history of evolution
 
 <section>
 	<h2>Rooted and unrooted trees</h2>
+
+	<img data-src="rootedToUnrooted.svg" style="width:70%">
+	
+	<div align="left" style="margin-top:5%; margin-left:15%; width:70%">
+	Most phylogeny-reconstruction methods are unable to identify the root of the tree, so unrooted trees are inferred. 
+	This includes the maximum parsimony method, as well as those distance, likelihood and Bayesian methods that do not assume a molecular clock.
+	</div>
+
 </section>
 
 <section>
 	<h2>Rooting trees using an outgroup</h2>
+	
+	<img data-src="RootingTreesOutgroup.png" style="width:100%">
+
 </section>
 
 <section>
 	<h2>The same unrooted tree</h2>
+
+	<img data-src="unrootedTrees.png" style="width:100%">
+
 </section>
 
 <section>
